Rearrangin courses files

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="general/css/bootstrap-reboot.min.css">
         <link rel="stylesheet" href="general/css/bootstrap.min.css">
         <link rel="stylesheet" href="general/css/fontawesome-all.min.css">
-        <link rel="stylesheet" href="index/css/index_style.css">
+        <link rel="stylesheet" href="docs/index/css/index_style.css">
     </head>
     <body class="bg-info">
         <!-- ******************************
