Adding angular Validation
Adding validation to stage one for the doctor and the registration for the student

--- a/index.htm
+++ b/index.htm
@@ -102,13 +102,19 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-                 <form>
+                 <form name="stageOne" novalidate>
                   <div class="modal-body">
                    <div class="form-group">
-                      <input type="text" name="username" class="form-control" id="exampleInputUser" aria-describedby="emailHelp" placeholder="username" ng-model="name_check">
+                      <input type="text" name="username" class="form-control" id="exampleInputUser" aria-describedby="emailHelp" placeholder="username" ng-model="name_check" ng-required="true">
+                      <p ng-show="stageOne.username.$invalid && stageOne.username.$touched" class="text-danger text-center Stageerror">
+                          You must fill out the username first!
+                      </p>
                     </div>
                     <div class="form-group">
-                          <input type="password" name="serial" class="form-control" id="exampleInputSerial" placeholder="Serial Number" ng-model="pass_check">
+                          <input type="password" name="serial" class="form-control" id="exampleInputSerial" placeholder="Serial Number" ng-model="pass_check" ng-required="true">
+                          <p ng-show="stageOne.serial.$invalid && stageOne.serial.$touched" class="text-danger text-center Stageerror">
+                              You must fill out the Password!
+                          </p>
                     </div>
                   </div>
                   <div class="modal-footer">
@@ -136,18 +142,24 @@
               </div>
 
               <!-- Start student Registration form -->
-              <form>
+              <form name="studentForm" novalidate>
               <div class="modal-body form-reg">
                    <div class="container-fluid">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                      <input type="text" class="form-control" name="firstName" id="exampleInputFirstName" placeholder="First Name" required = "required" ng-model="firstName_student">
+                                      <input type="text" class="form-control" name="firstName" id="exampleInputFirstName" placeholder="First Name" required = "required" ng-model="firstName_student" ng-required="true">
+                                      <p ng-show="studentForm.firstName.$invalid && studentForm.firstName.$touched" class="text-danger  error">
+                                          First Name is required!
+                                      </p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                      <input type="text" class="form-control" name="lastName" id="exampleInputLastName" placeholder="Last Name" ng-model="lastName_student"  required = "required">
+                                      <input type="text" class="form-control" name="lastName" id="exampleInputLastName" placeholder="Last Name" ng-model="lastName_student"  required = "required" ng-required="true">
+                                      <p ng-show="studentForm.lastName.$invalid && studentForm.lastName.$touched" class="text-danger  error">
+                                          Last Name is required!
+                                      </p>
                                 </div>
                             </div>
                         </div>
@@ -155,33 +167,42 @@
                             <div class="col-lg-12">
                                 <div class="form-group">
                                   <input type="email" class="form-control" name="email" id="email_student" aria-describedby="emailHelp" placeholder="Enter email"
-                                  ng-model="email_student"  required="required">
+                                  ng-model="email_student"  required="required" ng-required="true">
+                                  <p ng-show="studentForm.email.$invalid && studentForm.email.$touched" class="text-danger text-center error">
+                                      Not a valid email!
+                                  </p>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                      <input type="password" class="form-control" name="pass" id="password_student" placeholder="Password" ng-model="password_student"  required = "required">
+                                      <input type="password" class="form-control" name="pass" id="password_student" placeholder="Password" ng-model="password_student"  required = "required" ng-minlength="6">
+                                      <p ng-show="studentForm.pass.$invalid && studentForm.pass.$touched" class="text-danger text-center error">
+                                            Password Can't be less than 6 characters
+                                      </p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                      <input type="password" class="form-control" name="conPass" id="exampleInputPassword2" placeholder="Confirm Password" ng-model="conPassword_student"  required = "required">
+                                      <input type="password" class="form-control" name="conPass" id="exampleInputPassword2" placeholder="Confirm Password" ng-model="conPassword_student"  required = "required" ng-minlength="6">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="form-group">
-                                      <input type="text" class="form-control" name="national"  placeholder="Your National Number" ng-model="national"  required = "required">
+                                      <input type="text" class="form-control" name="national"  placeholder="Your National Number" ng-model="national"  required = "required" ng-maxlength="14" ng-minlength="14">
+                                      <p ng-show="studentForm.national.$invalid && studentForm.national.$touched" class="text-danger text-center error">
+                                            Must be 14 numbers!
+                                      </p>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
                                 <label for="acadmic">Academic Year:</label>
-                                <select class="form-control" name="academic-year" ng-model="year_student" style="display: inline-block" required="required">
+                                <select class="form-control" name="academic-year" ng-model="year_student" style="display: inline-block" required="required" ng-required="true">
                                        <option value="Pref">Prep</option>
                                        <option value="First">First</option>
                                        <option value="Second">Second</option>
@@ -192,7 +213,7 @@
 
                             <div class="col-lg-6">
                                 <label for="acadmic">Departments :</label>
-                                <select class="form-control" name="department" ng-model="department_student" style="display: inline-block" required="required">
+                                <select class="form-control" name="department" ng-model="department_student" style="display: inline-block" required="required" ng-required="true">
                                        <option value="Electrical">Electrical Engineering</option>
                                        <option value="Petrolum">Petrolum & Mining</option>
                                        <option value="Computers">Systems & Computers</option>
@@ -206,7 +227,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <label for="gender">Gender: </label>
-                                <select class="form-control" name="gender" ng-model="gender_student" style="display: inline-block" required="required">
+                                <select class="form-control" name="gender" ng-model="gender_student" style="display: inline-block" required="required" ng-required="true">
                                        <option value="male">Male</option>
                                        <option value="female">Female</option>
                                 </select>
