--- a/index.htm
+++ b/index.htm
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
         <title>Azhar University</title>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="general/css/bootstrap-reboot.min.css">
         <link rel="stylesheet" href="general/css/bootstrap.min.css">
         <link rel="stylesheet" href="general/css/fontawesome-all.min.css">
         <link rel="stylesheet" href="index/css/index_style.css">
-        <script src="general/js/angular.min.js"></script>
+        <script src="general/js/lib/angular/angular.min.js"></script>
+        <script src="index/js/dynamic.js"></script>
+        <script src="index/js/controllers/controller.js"></script>
     </head>
     <body class="bg-info" ng-app="app" ng-controller="formController">
+
         <!-- *************************************
         ***************  Navbar *****************
         ***************************************** -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" ng-include="'index/views/nav.html'">
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" ng-include="'index/views/nav.html'"></nav>
+        <div ng-include="'index/views/forms.html'"></div>
 
         <!-- *************************************
         ***************  Body  *****************
         ***************************************** -->
-        <div ng-include="'index/views/interface.html'"></div>
+        <main>
+            <a ng-href="docs/hub/index.html" class="btn btn-warning">Hub</a>
+        </main>
 
-        <script src="general/js/jquery-3.2.1.min.js"></script>
-        <script src="general/js/popper.min.js"></script>
-        <script src="general/js/bootstrap.min.js"></script>
-        <script src="index/js/dynamic.js"></script>
-        <script src="index/js/controller.js"></script>
+        <script src="general/js/lib/bootstrap/jquery-3.2.1.min.js"></script>
+        <script src="general/js/lib/bootstrap/popper.min.js"></script>
+        <script src="general/js/lib/bootstrap/bootstrap.min.js"></script>
     </body>
 </html>
